test/expected/declare_rtf_v-c.out
declare f as restricted function
        ^
9: error: function can not be "restrict"
